--- a/bert/yamls/finetune-glue/M2_SC_V2.yaml
+++ b/bert/yamls/finetune-glue/M2_SC_V2.yaml
@@ -79,7 +79,7 @@ task_name: 'mimic'
 #task_name: hyperpartisan
 num_labels: 50
 problem_type: multi_label_classification #single_label_classification multi_label_classification
-save_folder: ./local-finetune-checkpoints/${tokenizer_name}/${max_seq_len}/${task_name}/${max_duration}/${learning_rate}
+save_folder: ./local-finetune-checkpoints/${tokenizer_name}/${max_seq_len}/${task_name}/${max_duration}/${learning_rate}/${t_warmup}
 
 # (Optional) W&B logging
 loggers:
