--- a/bert/yamls/finetune-glue/M2_SC_V1.yaml
+++ b/bert/yamls/finetune-glue/M2_SC_V1.yaml
@@ -9,7 +9,7 @@ parallel: false
 base_run_name: monarch-mixer-finetune-long-context
 default_seed: 19
 precision: fp32 
-max_seq_len: 512 #512, 128
+max_seq_len: 128 #512, 128
 
 # Tokenizer for dataset creation
 tokenizer_name: bert-base-uncased
@@ -84,14 +84,14 @@ loggers:
   wandb: 
     project: attention
     entity: hazy-research
-    name: ${tokenizer_name}-${max_seq_len}-${split_for_testing}-${max_duration}-${learning_rate}_LR-${scheduler_name}-${t_warmup}-${alpha_f}-${task_name}-${problem_type}
+    name: M2-BERT-${tokenizer_name}-${max_seq_len}-${split_for_testing}-${max_duration}-${learning_rate}_LR-${scheduler_name}-${t_warmup}-${alpha_f}-${task_name}-${problem_type}
 
 ##########################################################
 
 # Loading
 #starting_checkpoint_load_path: ./local-bert-checkpoints/M2-110M/model.pt
-#starting_checkpoint_load_path: ./local-bert-checkpoints/M2-110M/model.pt
-starting_checkpoint_load_path: ./local-bert-checkpoints/M2-260M/ep0-ba70000-rank0.pt
+starting_checkpoint_load_path: ./local-bert-checkpoints/M2-110M/model.pt
+#starting_checkpoint_load_path: ./local-bert-checkpoints/M2-260M/ep0-ba70000-rank0.pt
 #starting_checkpoint_load_path: ./local-bert-checkpoints/M2-341M/ep0-ba70000-rank0.pt
 local_pretrain_checkpoint_folder: ./local-bert-checkpoints/
 
@@ -102,9 +102,9 @@ local_pretrain_checkpoint_folder: ./local-bert-checkpoints/
 # starting_checkpoint_load_path: ${local_pretrain_checkpoint_folder}/ep3-ba24546-rank0.pt
 
 # Saving
-save_finetune_checkpoint_prefix: ./local-finetune-checkpoints/M2-260M/ # (local)
+save_finetune_checkpoint_prefix: ./local-finetune-checkpoints/M2-110M/ # (local)
 # save_finetune_checkpoint_prefix: s3://<bucket>/remote-finetune-checkpoints # (remote)
-save_finetune_checkpoint_folder: ./local-finetune-checkpoints/${tokenizer_name}/${max_seq_len}/${task_name}/${max_duration}/${learning_rate}/${t_warmup}
+save_finetune_checkpoint_folder: ./local-finetune-checkpoints/M2-BERT/${tokenizer_name}/${max_seq_len}/${task_name}/${max_duration}/${learning_rate}/${t_warmup}
 
 #################################################
 
@@ -146,15 +146,15 @@ model:
 
     #hidden_size: 768
     #intermediate_size: 3072
-    #hidden_size: 960
-    #intermediate_size: 3840
+    hidden_size: 960
+    intermediate_size: 3840
     #hidden_size: 1536
     #intermediate_size: 6144
-    hidden_size: 1792
-    intermediate_size: 7168
+    #hidden_size: 1792
+    #intermediate_size: 7168
 
     monarch_mixer_sequence_mixing: True
-    long_conv_l_max: 512
+    long_conv_l_max: 128 #512
     long_conv_kernel_learning_rate: 1e-3
     hyena_lr_pos_emb: 1e-5
     hyena_w: 10
