--- a/bert/yamls/finetune-glue/M2_SC_V1.yaml
+++ b/bert/yamls/finetune-glue/M2_SC_V1.yaml
@@ -77,7 +77,7 @@ task_name: ecthr
 #task_name: 'contract_nli'
 num_labels: 10
 problem_type: multi_label_classification #multi_label_classification
-expand_positional_embeddings: True
+expand_positional_embeddings: False
 
 # (Optional) W&B logging
 loggers:
