--- a/bert/yamls/finetune-glue/M2_SC_V1.yaml
+++ b/bert/yamls/finetune-glue/M2_SC_V1.yaml
@@ -78,7 +78,7 @@ task_name: ecthr
 #task_name: hyperpartisan
 num_labels: 10
 problem_type: multi_label_classification #single_label_classification #multi_label_classification
-expand_positional_embeddings: False
+expand_positional_embeddings: True
 
 # (Optional) W&B logging
 loggers:
