--- a/bert/yamls/finetune-glue/M2_SC_V2.yaml
+++ b/bert/yamls/finetune-glue/M2_SC_V2.yaml
@@ -72,12 +72,12 @@ progress_bar: false
 log_to_console: true
 console_log_interval: 50ba
 
-#task_name: 'mimic'
-task_name: ecthr
+task_name: 'mimic'
+#task_name: ecthr
 #task_name: 'contract_nli'
 #task_name: '20news'
 #task_name: hyperpartisan
-num_labels: 10
+num_labels: 50
 problem_type: multi_label_classification #single_label_classification multi_label_classification
 save_folder: ./local-finetune-checkpoints/${tokenizer_name}/${max_seq_len}/${task_name}/${max_duration}/${learning_rate}/${t_warmup}
 
