--- a/bert/yamls/finetune-glue/M2_SC_V2.yaml
+++ b/bert/yamls/finetune-glue/M2_SC_V2.yaml
@@ -12,7 +12,7 @@ precision: fp32
 max_seq_len: 512 #512, 128
 
 # Tokenizer for dataset creation
-tokenizer_name: roberta-base #roberta-base #bert-base-uncased
+tokenizer_name: bert-base-uncased #roberta-base #bert-base-uncased
 
 
 # Dataloaders (make sure to update these after you modify the starter script!)
@@ -72,12 +72,12 @@ progress_bar: false
 log_to_console: true
 console_log_interval: 50ba
 
-task_name: 'mimic'
-#task_name: ecthr
+#task_name: 'mimic'
+task_name: ecthr
 #task_name: 'contract_nli'
 #task_name: '20news'
 #task_name: hyperpartisan
-num_labels: 50
+num_labels: 10
 problem_type: multi_label_classification #single_label_classification multi_label_classification
 save_folder: ./local-finetune-checkpoints/${tokenizer_name}/${max_seq_len}/${task_name}/${max_duration}/${learning_rate}/${t_warmup}
 
