--- a/bert/yamls/finetune-glue/M2_SC_V1.yaml
+++ b/bert/yamls/finetune-glue/M2_SC_V1.yaml
@@ -42,7 +42,7 @@ scheduler:
   t_warmup: ${t_warmup} #0.06dur #1ep # Warmup to the full LR for 6% of the training duration
   alpha_f: ${alpha_f} # Linearly decay to 0.02x the full LR by the end of the training duration
 
-learning_rate: 5.0e-5
+learning_rate: 2.0e-5
 optimizer:
   name: decoupled_adamw
   lr: ${learning_rate}
@@ -73,10 +73,10 @@ log_to_console: true
 console_log_interval: 50ba
 
 #task_name: 'mimic'
-#task_name: ecthr
+task_name: ecthr
 #task_name: 'contract_nli'
-task_name: hyperpartisan
-num_labels: 2
+#task_name: hyperpartisan
+num_labels: 10
 problem_type: single_label_classification #single_label_classification #multi_label_classification
 expand_positional_embeddings: True
 
@@ -92,8 +92,8 @@ loggers:
 
 # Loading
 #starting_checkpoint_load_path: ./local-bert-checkpoints/M2-110M/model.pt
-#starting_checkpoint_load_path: ./local-bert-checkpoints/M2-110M/model.pt
-starting_checkpoint_load_path: ./local-bert-checkpoints/M2-260M/ep0-ba70000-rank0.pt
+starting_checkpoint_load_path: ./local-bert-checkpoints/M2-110M/model.pt
+#starting_checkpoint_load_path: ./local-bert-checkpoints/M2-260M/ep0-ba70000-rank0.pt
 #starting_checkpoint_load_path: ./local-bert-checkpoints/M2-341M/ep0-ba70000-rank0.pt
 local_pretrain_checkpoint_folder: ./local-bert-checkpoints/
 
@@ -104,7 +104,7 @@ local_pretrain_checkpoint_folder: ./local-bert-checkpoints/
 # starting_checkpoint_load_path: ${local_pretrain_checkpoint_folder}/ep3-ba24546-rank0.pt
 
 # Saving
-save_finetune_checkpoint_prefix: ./local-finetune-checkpoints/M2-260M/ # (local)
+save_finetune_checkpoint_prefix: ./local-finetune-checkpoints/M2-110M/ # (local)
 # save_finetune_checkpoint_prefix: s3://<bucket>/remote-finetune-checkpoints # (remote)
 save_finetune_checkpoint_folder: ./local-finetune-checkpoints/M2-BERT/${tokenizer_name}/${max_seq_len}/${task_name}/${max_duration}/${learning_rate}/${t_warmup}/${expand_positional_embeddings}
 
@@ -148,10 +148,10 @@ model:
 
     #hidden_size: 768
     #intermediate_size: 3072
-    #hidden_size: 960
-    #intermediate_size: 3840
-    hidden_size: 1536
-    intermediate_size: 6144
+    hidden_size: 960
+    intermediate_size: 3840
+    #hidden_size: 1536
+    #intermediate_size: 6144
     #hidden_size: 1792
     #intermediate_size: 7168
 
